--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">14</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">15</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -243,6 +243,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Dieb, T. M., Ju, S., Shiomi, J., & Tsuda, K. (2019). Monte Carlo tree search for materials design and discovery. MRS Communications, 1–5. <a href="http://doi.org/10.1557/mrc.2019.40"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>De Lile, J. R., Lee, S. Y., Kim, H.-J., Pak, C., & Lee, S. G. (2019). First-principles study of the effect of compressive strain on oxygen adsorption in Pd/Ni/Cu-alloy-core@Pd/Ir-alloy-shell catalysts. New Journal of Chemistry. <a href="http://doi.org/10.1039/C9NJ01705D"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Moradabadi, A., & Kaghazchi, P. (2019). Defect chemistry in cubic Li<sub>6.25</sub>Al<sub>0.25</sub>La<sub>3</sub>Zr<sub>2</sub>O<sub>12</sub> solid electrolyte: A density functional theory study. Solid State Ionics, 338, 74–79. <a href="https://doi.org/10.1016/j.ssi.2019.04.023"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+	    <li>Wang, T., Qiu, W., Feng, Q., Huang, K., Zhao, X., Bao, Q., … Liu, J. (2019). The critical role of oxygen-evolution kinetics in the electrochemical stability of oxide superionic conductors. Journal of Materials Chemistry A, 7(28), 17008–17013. <a href="https://doi.org/10.1039/C9TA04841C"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
