--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">18</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">19</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -247,7 +247,8 @@ ga('require', 'pageVisibilityTracker');
             <li>Hussain, F., Li, P., & Li, Z. (2019). Theoretical Insights into Li-Ion Transport in LiTa<sub>2</sub>PO<sub>8</sub>. The Journal of Physical Chemistry C, 123(32), 19282–19287. <a href="https://doi.org/10.1021/acs.jpcc.9b03313"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Mansouri Tehrani, A., Oliynyk, A. O., Rizvi, Z., Lotfi, S., Parry, M., Sparks, T. D., & Brgoch, J. (2019). Atomic substitution to balance hardness ductility and sustainability in molybdenum tungsten borocabide. Chemistry of Materials, acs.chemmater.9b02596. <a href="https://doi.org/10.1021/acs.chemmater.9b02596"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Finley, E., Gaultois, M. W., & Brgoch, J. (2019). Unlocking the key to persistent luminescence with X-ray absorption spectroscopy: A local structure investigation of Cr-substituted spinel-type phosphors. Physical Chemistry Chemical Physics, 19. <a href="https://doi.org/10.1039/C9CP02655J"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-          </ul>
+            <li>Edalati, K., Fujita, I., Takechi, S., Nakashima, Y., Kumano, K., Razavi-Khosroshahi, H., … Horita, Z. (2019). Photocatalytic activity of aluminum oxide by oxygen vacancy generation using high-pressure torsion straining. Scripta Materialia, 173, 120–124. <a href="https://doi.org/10.1016/j.scriptamat.2019.08.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+	  </ul>
         </div>
       </div>
     </div>
