--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">20</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">22</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -249,7 +249,23 @@ ga('require', 'pageVisibilityTracker');
             <li>Finley, E., Gaultois, M. W., & Brgoch, J. (2019). Unlocking the key to persistent luminescence with X-ray absorption spectroscopy: A local structure investigation of Cr-substituted spinel-type phosphors. Physical Chemistry Chemical Physics, 21(35), 19349–19358. <a href="https://doi.org/10.1039/C9CP02655J"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Edalati, K., Fujita, I., Takechi, S., Nakashima, Y., Kumano, K., Razavi-Khosroshahi, H., … Horita, Z. (2019). Photocatalytic activity of aluminum oxide by oxygen vacancy generation using high-pressure torsion straining. Scripta Materialia, 173, 120–124. <a href="https://doi.org/10.1016/j.scriptamat.2019.08.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Qiu, W., Li, Z., Chen, K., Li, C., Liu, J., & Zhang, W. (2019). Stabilizing Low-coordinated O-ions to Operate Cationic and Anionic Redox Chemistry of Li-ion Battery Materials. ACS Applied Materials & Interfaces, 11(41), 37768–37778. <a href="https://doi.org/10.1021/acsami.9b13463"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
-	  </ul>
+            <li>Saleev, V., & Shipilova, A. (2019). Ab initio study of optical and bulk properties of cesium lead halide perovskite solid solutions. Modern Physics Letters B, 1950386, 1950386. <a href="https://doi.org/10.1142/S021798491950386X"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Papi, H., Favre, V. Y., Ahmadvand, H., Alaei, M., Khondabi, M., Sheptyakov, D., … Rønnow, H. M. (2019). Magnetic and structural properties of Ni-substituted magnetoelectric Co<sub>4</sub>Nb<sub>2</sub>O<sub>9</sub>. Physical Review B, 100(13), 1–8. <a href="https://doi.org/10.1103/physrevb.100.134408"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <a data-toggle="collapse" href="#collapse2020">
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">1</span></h4>
+        </a>
+      </div>
+      <div id="collapse2020" class="panel-collapse collapse">
+        <div class="panel-body">
+          <ul class="list-papers">
+            <li>Romaka, V. V., Rogl, G., Grytsiv, A., & Rogl, P. (2020). Determination of structural disorder in Heusler-type phases. Computational Materials Science, 172(July 2019), 109307. <a href="https://doi.org/10.1016/j.commatsci.2019.109307"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+          </ul>
         </div>
       </div>
     </div>
