--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">22</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">23</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -251,6 +251,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Qiu, W., Li, Z., Chen, K., Li, C., Liu, J., & Zhang, W. (2019). Stabilizing Low-coordinated O-ions to Operate Cationic and Anionic Redox Chemistry of Li-ion Battery Materials. ACS Applied Materials & Interfaces, 11(41), 37768–37778. <a href="https://doi.org/10.1021/acsami.9b13463"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
             <li>Saleev, V., & Shipilova, A. (2019). Ab initio study of optical and bulk properties of cesium lead halide perovskite solid solutions. Modern Physics Letters B, 1950386, 1950386. <a href="https://doi.org/10.1142/S021798491950386X"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Papi, H., Favre, V. Y., Ahmadvand, H., Alaei, M., Khondabi, M., Sheptyakov, D., … Rønnow, H. M. (2019). Magnetic and structural properties of Ni-substituted magnetoelectric Co<sub>4</sub>Nb<sub>2</sub>O<sub>9</sub>. Physical Review B, 100(13), 1–8. <a href="https://doi.org/10.1103/physrevb.100.134408"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Gautam, A., Sadowski, M., Prinz, N., Eickhoff, H., & Minafra, N. (2019). Rapid crystallization and kinetic freezing of site-disorder in the lithium superionic argyrodite Li<sub>6</sub>PS<sub>5</sub>Br. ChemRxiv, (2), 1–22. <a href="https://doi.org/10.26434/chemrxiv.9794588"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
           </ul>
         </div>
       </div>
