--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">24</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">25</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -253,6 +253,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Papi, H., Favre, V. Y., Ahmadvand, H., Alaei, M., Khondabi, M., Sheptyakov, D., … Rønnow, H. M. (2019). Magnetic and structural properties of Ni-substituted magnetoelectric Co<sub>4</sub>Nb<sub>2</sub>O<sub>9</sub>. Physical Review B, 100(13), 1–8. <a href="https://doi.org/10.1103/physrevb.100.134408"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Gautam, A., Sadowski, M., Prinz, N., Eickhoff, H., & Minafra, N. (2019). Rapid crystallization and kinetic freezing of site-disorder in the lithium superionic argyrodite Li<sub>6</sub>PS<sub>5</sub>Br. ChemRxiv, (2), 1–22. <a href="https://doi.org/10.26434/chemrxiv.9794588"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Mao, M., Luo, C., Pollard, T. P., Hou, S., Gao, T., Fan, X., … Wang, C. (2019). A Pyrazine-Based Polymer for Fast-Charge Batteries. Angewandte Chemie International Edition. <a href="https://doi.org/10.1002/anie.201910916"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Hamaguchi, M., Momida, H., & Oguchi, T. (2019). Significant role of oxygen redox reaction with O<sub>2</sub>-release in Li-excess cation-disordered rock-salt cathodes Li<sub>2+2x</sub>Mn<sub>1−x</sub>Ti<sub>1−x</sub>O<sub>4</sub>: First-principles calculations. Electrochimica Acta, 135286. <a href="https://doi.org/10.1016/j.electacta.2019.135286"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
 	  </ul>
         </div>
       </div>
