--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ ga('require', 'pageVisibilityTracker');
     <h4><b>23-05-2019</b></h4>
     </div>
     <div class="text-left col-xs-8 col-sm-9 col-md-10 col-xl-11">
-    <h4> Supercell v1.2 (perfromance increase). </h4> <p>The new version of <i>supercell</i> program is around 4 times faster, than the pervious one! </p>
+    <h4> Supercell v1.2 (performance increase). </h4> <p>The new version of <i>supercell</i> program is around 4 times faster, than the previous one! </p>
     </div>
   </div>   	
   <div class="row">
@@ -264,13 +264,14 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">1</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">2</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
         <div class="panel-body">
           <ul class="list-papers">
             <li>Romaka, V. V., Rogl, G., Grytsiv, A., & Rogl, P. (2020). Determination of structural disorder in Heusler-type phases. Computational Materials Science, 172(July 2019), 109307. <a href="https://doi.org/10.1016/j.commatsci.2019.109307"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Solokha, P., Eremin, R. A., Leisegang, T., Proserpio, D. M., Akhmetshina, T., Gurskaya, A., … De Negri, S. (2020). A new quasicrystal approximant in the Sc–Pd system: from topological data mining to the bench. Chemistry of Materials, acs.chemmater.9b03767. <a href="https://doi.org/10.1021/acs.chemmater.9b03767"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
