--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2019">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">28</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2019<span class="badge badge-success pull-right">27</span></h4>
         </a>
       </div>
       <div id="collapse2019" class="panel-collapse collapse">
@@ -249,11 +249,10 @@ ga('require', 'pageVisibilityTracker');
             <li>Finley, E., Gaultois, M. W., & Brgoch, J. (2019). Unlocking the key to persistent luminescence with X-ray absorption spectroscopy: A local structure investigation of Cr-substituted spinel-type phosphors. Physical Chemistry Chemical Physics, 21(35), 19349–19358. <a href="https://doi.org/10.1039/C9CP02655J"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Edalati, K., Fujita, I., Takechi, S., Nakashima, Y., Kumano, K., Razavi-Khosroshahi, H., … Horita, Z. (2019). Photocatalytic activity of aluminum oxide by oxygen vacancy generation using high-pressure torsion straining. Scripta Materialia, 173, 120–124. <a href="https://doi.org/10.1016/j.scriptamat.2019.08.011"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Qiu, W., Li, Z., Chen, K., Li, C., Liu, J., & Zhang, W. (2019). Stabilizing Low-coordinated O-ions to Operate Cationic and Anionic Redox Chemistry of Li-ion Battery Materials. ACS Applied Materials & Interfaces, 11(41), 37768–37778. <a href="https://doi.org/10.1021/acsami.9b13463"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
-            <li>Saleev, V., & Shipilova, A. (2019). Ab initio study of optical and bulk properties of cesium lead halide perovskite solid solutions. Modern Physics Letters B, 1950386, 1950386. <a href="https://doi.org/10.1142/S021798491950386X"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Papi, H., Favre, V. Y., Ahmadvand, H., Alaei, M., Khondabi, M., Sheptyakov, D., … Rønnow, H. M. (2019). Magnetic and structural properties of Ni-substituted magnetoelectric Co<sub>4</sub>Nb<sub>2</sub>O<sub>9</sub>. Physical Review B, 100(13), 1–8. <a href="https://doi.org/10.1103/physrevb.100.134408"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Saleev, V., & Shipilova, A. (2019). Ab initio study of optical and bulk properties of cesium lead halide perovskite solid solutions. Modern Physics Letters B, 33(31), 1950386. <a href="https://doi.org/10.1142/S021798491950386X"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Papi, H., Favre, V. Y., Ahmadvand, H., Alaei, M., Khondabi, M., Sheptyakov, D., … Rønnow, H. M. (2019). Magnetic and structural properties of Ni-substituted magnetoelectric <math> <msub> <mi mathvariant="normal">Co</mi> <mn>4</mn> </msub> <msub> <mi mathvariant="normal">Nb</mi> <mn>2</mn> </msub> <msub> <mi mathvariant="normal">O</mi> <mn>9</mn> </msub> </math> Physical Review B, 100(13), 134408. <a href="https://doi.org/10.1103/physrevb.100.134408"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Gautam, A., Sadowski, M., Prinz, N., Eickhoff, H., Minafra, N., Ghidiu, M., … Zeier, W. G. (2019). Rapid Crystallization and Kinetic Freezing of Site-Disorder in the Lithium Superionic Argyrodite Li<sub>6</sub>PS<sub>5</sub>Br. Chemistry of Materials, 31(24), 10178–10185. <a href="https://doi.org/10.1021/acs.chemmater.9b03852"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a><a href="https://doi.org/10.26434/chemrxiv.9794588">, <i class="fa fa-file-text-o" aria-hidden="true"></i> View ChemRxiv</a></li>
-            <li>Mao, M., Luo, C., Pollard, T. P., Hou, S., Gao, T., Fan, X., … Wang, C. (2019). A Pyrazine-Based Polymer for Fast-Charge Batteries. Angewandte Chemie International Edition. <a href="https://doi.org/10.1002/anie.201910916"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Hamaguchi, M., Momida, H., & Oguchi, T. (2019). Significant role of oxygen redox reaction with O<sub>2</sub>-release in Li-excess cation-disordered rock-salt cathodes Li<sub>2+2x</sub>Mn<sub>1−x</sub>Ti<sub>1−x</sub>O<sub>4</sub>: First-principles calculations. Electrochimica Acta, 135286. <a href="https://doi.org/10.1016/j.electacta.2019.135286"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Mao, M., Luo, C., Pollard, T. P., Hou, S., Gao, T., Fan, X., … Wang, C. (2019). A Pyrazine-Based Polymer for Fast-Charge Batteries. Angewandte Chemie International Edition, 58(49), 17820–17826. <a href="https://doi.org/10.1002/anie.201910916"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Eremin, R. A., Zolotarev, P. N., Golov, A. A., Nekrasova, N. A., & Leisegang, T. (2019). Ionic Transport in Doped Solid Electrolytes by Means of DFT Modeling and ML Approaches: A Case Study of Ti-Doped KFeO<sub>2</sub>. The Journal of Physical Chemistry C, 123(49), 29533–29542. <a href="https://doi.org/10.1021/acs.jpcc.9b07535"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Alfaruqi, M. H., Islam, S., Lee, J., Jo, J., Mathew, V., & Kim, J. (2019). First principles calculations study of α-MnO<sub>2</sub> as a potential cathode for Al-ion battery application. Journal of Materials Chemistry A, 7(47), 26966–26974. <a href="https://doi.org/10.1039/C9TA09321D"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Arjmandi, H. R., & Grieshammer, S. (2019). Defect formation and migration in Nasicon Li<sub>1+x</sub>Al<sub>x</sub>Ti<sub>2−x</sub>(PO<sub>4</sub>)<sub>3</sub>. Physical Chemistry Chemical Physics, 21(43), 24232–24238. <a href="https://doi.org/10.1039/C9CP04792A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
@@ -264,14 +263,16 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">2</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">4</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
         <div class="panel-body">
           <ul class="list-papers">
             <li>Romaka, V. V., Rogl, G., Grytsiv, A., & Rogl, P. (2020). Determination of structural disorder in Heusler-type phases. Computational Materials Science, 172(July 2019), 109307. <a href="https://doi.org/10.1016/j.commatsci.2019.109307"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Hamaguchi, M., Momida, H., & Oguchi, T. (2020). Significant role of oxygen redox reaction with O<sub>2</sub>-release in Li-excess cation-disordered rock-salt cathodes Li<sub>2+2x</sub>Mn<sub>1−x</sub>Ti<sub>1−x</sub>O<sub>4</sub>: First-principles calculations. Electrochimica Acta, 330, 135286. <a href="https://doi.org/10.1016/j.electacta.2019.135286"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>          
             <li>Solokha, P., Eremin, R. A., Leisegang, T., Proserpio, D. M., Akhmetshina, T., Gurskaya, A., … De Negri, S. (2020). A new quasicrystal approximant in the Sc–Pd system: from topological data mining to the bench. Chemistry of Materials, acs.chemmater.9b03767. <a href="https://doi.org/10.1021/acs.chemmater.9b03767"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Zhang, Z., Mansouri Tehrani, A., & Brgoch, J. (2020). Tailoring the Mechanical Properties of Earth-Abundant Transition Metal Borides via Bonding Optimization. The Journal of Physical Chemistry C, acs.jpcc.9b11240. <a href="https://doi.org/10.1021/acs.jpcc.9b11240"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
@@ -285,11 +286,11 @@ ga('require', 'pageVisibilityTracker');
   <div class="row">
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-zip-o" aria-hidden="true"></i>  Compiled binaries</h3>
-      <p>The easiest way to obtain the program is to download compiled binaries for Linux and Mac platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without a root permission.</p>
+      <p>The easiest way to obtain the program is to download compiled binaries for Linux, Mac and Windows platforms. Just download the archive, unpack it and follow the instruction inside. You don't need to install the binaries, therefore you can use it without a root permission. NB! Windows version is significantly slower and do not support acrhive output.</p>
     </div>  
     <div class="text-center col-sm-6">
       <h3><i class="fa fa-file-code-o" aria-hidden="true"></i>  Source code</h3>
-		<p>Building the program from source code is suggested for advanced users, who need output packing or want to change the program code. I can recommend to use Ubuntu 12.04 or later for compiling the code. You can also install compiled program to your system, if you have administrator rights. The program can be compiled for Windows platfrom also, but I've never tried this. Tutorial and manual sources are also available.</p>
+		<p>Building the program from source code is suggested for advanced users, who need output packing or want to change the program code. I can recommend to use Ubuntu 12.04 or later for compiling the code. You can also install compiled program to your system, if you have administrator rights. The program can be compiled natively on Windows platfrom also, but I've never tried this. Tutorial and manual sources are also available.</p>
     </div>  
   </div>
   <div class="row">
@@ -363,7 +364,7 @@ ga('require', 'pageVisibilityTracker');
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>Copyright © Kirill Okhotnikov. All rights reserved. 2019</p>
+        <p>Copyright © Kirill Okhotnikov. All rights reserved. 2020</p>
       </div>
     </div>
   </div>
