--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">4</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">5</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -273,6 +273,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Hamaguchi, M., Momida, H., & Oguchi, T. (2020). Significant role of oxygen redox reaction with O<sub>2</sub>-release in Li-excess cation-disordered rock-salt cathodes Li<sub>2+2x</sub>Mn<sub>1−x</sub>Ti<sub>1−x</sub>O<sub>4</sub>: First-principles calculations. Electrochimica Acta, 330, 135286. <a href="https://doi.org/10.1016/j.electacta.2019.135286"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>          
             <li>Solokha, P., Eremin, R. A., Leisegang, T., Proserpio, D. M., Akhmetshina, T., Gurskaya, A., … De Negri, S. (2020). A new quasicrystal approximant in the Sc–Pd system: from topological data mining to the bench. Chemistry of Materials, acs.chemmater.9b03767. <a href="https://doi.org/10.1021/acs.chemmater.9b03767"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Zhang, Z., Mansouri Tehrani, A., & Brgoch, J. (2020). Tailoring the Mechanical Properties of Earth-Abundant Transition Metal Borides via Bonding Optimization. The Journal of Physical Chemistry C, acs.jpcc.9b11240. <a href="https://doi.org/10.1021/acs.jpcc.9b11240"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Yamanaka, K., Raebiger, H., Mukai, K., & Shudo, K. (2020). Modulation of the optical absorption edge of ε- and κ- Ga<sub>2</sub>O<sub>3</sub> due to Co impurities caused by band structure changes: Work function measurements and first-principle calculations. Journal of Applied Physics, 127(6), 065701. <a href="https://doi.org/10.1063/1.5134521"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
           </ul>
         </div>
       </div>
