--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">9</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">10</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -276,8 +276,9 @@ ga('require', 'pageVisibilityTracker');
             <li>Yamanaka, K., Raebiger, H., Mukai, K., & Shudo, K. (2020). Modulation of the optical absorption edge of ε- and κ- Ga<sub>2</sub>O<sub>3</sub> due to Co impurities caused by band structure changes: Work function measurements and first-principle calculations. Journal of Applied Physics, 127(6), 065701. <a href="https://doi.org/10.1063/1.5134521"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Han, Z., Gui, Z., Zhu, Y. B., Qin, P., Zhang, B.-P., Zhang, W., … Liu, W. (2020). The Electronic Transport Channel Protection and Tuning in Real Space to Boost the Thermoelectric Performance of Mg<sub>3+δ</sub>Sb<sub>2-y</sub>Bi<sub>y</sub> near Room Temperature. Research, 2020, 1–12. <a href="https://doi.org/10.34133/2020/1672051"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Smith Pellizzeri, T., Sanjeewa, L. D., Pellizzeri, S., McMillen, C., Garlea, V. O., Ye, F., … Kolis, J. (2020). Single Crystal Neutron and Magnetic Measurements of Rb<sub>2</sub>Mn<sub>3</sub>(VO<sub>4</sub>)<sub>2</sub>CO<sub>3</sub> and K<sub>2</sub>Co<sub>3</sub>(VO<sub>4</sub>)<sub>2</sub>CO<sub>3</sub> with Mixed Honeycomb and Triangular Magnetic Lattices. Dalton Transactions. <a href="https://doi.org/10.1039/c9dt03389k"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Zhu, Y., Poplawsky, J. D., Li, S., Unocic, R. R., Bland, L. G., Taylor, C. D., … Frankel, G. S. (2020). Localized Corrosion at nm-Scale Hardening Precipitates in Al-Cu-Li Alloys. Acta Materialia. <a href="https://doi.org/10.1016/j.actamat.2020.03.006"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Lu, P., Qiu, W., Wei, Y., Zhu, C., Shi, X., Chen, L., & Xu, F. (2020). The order–disorder transition in Cu 2 Se and medium-range ordering in the high-temperature phase. Acta Crystallographica Section B Structural Science, Crystal Engineering and Materials, 76(2), 1–7. <a href="https://doi.org/10.1107/S2052520620002164"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Zhu, Y., Poplawsky, J. D., Li, S., Unocic, R. R., Bland, L. G., Taylor, C. D., … Frankel, G. S. (2020). Localized corrosion at nm-scale hardening precipitates in Al-Cu-Li alloys. Acta Materialia, 189, 204–213. <a href="https://doi.org/10.1016/j.actamat.2020.03.006"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Lu, P., Qiu, W., Wei, Y., Zhu, C., Shi, X., Chen, L., & Xu, F. (2020). The order–disorder transition in Cu<sub>2</sub>Se and medium-range ordering in the high-temperature phase. Acta Crystallographica Section B Structural Science, Crystal Engineering and Materials, 76(2), 1–7. <a href="https://doi.org/10.1107/S2052520620002164"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Rakhmatullin, A., Šimko, F., Véron, E., Allix, M., Martineau-Corcos, C., Fitch, A., … Bessada, C. (2020). X-ray Diffraction, NMR Studies, and DFT Calculations of the Room and High Temperature Structures of Rubidium Cryolite, Rb<sub>3</sub>AlF<sub>6</sub>. Inorganic Chemistry, acs.inorgchem.0c00415. <a href="https://doi.org/10.1021/acs.inorgchem.0c00415"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
           </ul>
         </div>
       </div>
