--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">12</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">13</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -281,6 +281,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Rakhmatullin, A., Šimko, F., Véron, E., Allix, M., Martineau-Corcos, C., Fitch, A., … Bessada, C. (2020). X-ray Diffraction, NMR Studies, and DFT Calculations of the Room and High Temperature Structures of Rubidium Cryolite, Rb<sub>3</sub>AlF<sub>6</sub>. Inorganic Chemistry, acs.inorgchem.0c00415. <a href="https://doi.org/10.1021/acs.inorgchem.0c00415"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Wang, S., Wang, J., & Khazaei, M. (2020). Discovery of stable and intrinsic antiferromagnetic iron oxyhalides monolayers. Physical Chemistry Chemical Physics, 19. <a href="https://doi.org/10.1039/D0CP01767A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Mitra, A., Shaw, A., & Chakrabarti, P. K. (2020). Structural transformation induced enhanced multiferroicity in Al<sup>3+</sup> and Ti<sup>4+</sup> co-doped LaFeO<sub>3</sub>. Advanced Powder Technology, (April), 1–11. <a href="https://doi.org/10.1016/j.apt.2020.04.013"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Dai, Z., Yu, J., Liu, J., Liu, R., Sun, Q., Chen, D., & Ciucci, F. (2020). Highly conductive and nonflammable composite polymer electrolytes for rechargeable quasi-solid-state Li-metal batteries. Journal of Power Sources, 464(February), 228182. <a href="https://doi.org/10.1016/j.jpowsour.2020.228182"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>            
           </ul>
         </div>
       </div>
