--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">16</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">17</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -284,7 +284,8 @@ ga('require', 'pageVisibilityTracker');
             <li>Dai, Z., Yu, J., Liu, J., Liu, R., Sun, Q., Chen, D., & Ciucci, F. (2020). Highly conductive and nonflammable composite polymer electrolytes for rechargeable quasi-solid-state Li-metal batteries. Journal of Power Sources, 464(February), 228182. <a href="https://doi.org/10.1016/j.jpowsour.2020.228182"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Wang, M., Li, L., Zhang, K., & Xie, J. (2020). Colossal permittivity Ti<sub>1-x</sub>(Eu<sub>0.5</sub>Ta<sub>0.5</sub>)<sub>x</sub>O<sub>2</sub> ceramics with excellent thermal stability. ACS Applied Electronic Materials, (May), acsaelm.0c00240. <a href="https://doi.org/10.1021/acsaelm.0c00240"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Jiang, C., Lu, X., & Cao, D. (2020). First-principles insight into the entanglements between superionic diffusion and Li/Al antisite in Al-doped Li<sub>1+x</sub>Al<sub>x</sub>Ge<sub>2−x</sub>(PO<sub>4</sub>)<sub>3</sub> (LAGP). Science China Technological Sciences, 10(13), 10935–10944. <a href="https://doi.org/10.1007/s11431-020-1562-3"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Hoedl, M. F., Gryaznov, D., Merkle, R., Kotomin, E. A., & Maier, J. (2020). Interdependence of Oxygenation and Hydration in Mixed Conducting (Ba,Sr)FeO<sub>3-δ</sub> Perovskites Studied by Density Functional Theory. The Journal of Physical Chemistry C, acs.jpcc.0c01924. <a href="https://doi.org/10.1021/acs.jpcc.0c01924"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Hoedl, M. F., Gryaznov, D., Merkle, R., Kotomin, E. A., & Maier, J. (2020). Interdependence of Oxygenation and Hydration in Mixed Conducting (Ba,Sr)FeO<sub>3-δ</sub> Perovskites Studied by Density Functional Theory. The Journal of Physical Chemistry C, 124(22), 11780–11789. <a href="https://doi.org/10.1021/acs.jpcc.0c01924"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Lotfi, S., Zhang, Z., Viswanathan, G., Fortenberry, K., Mansouri Tehrani, A., & Brgoch, J. (2020). Targeting Productive Composition Space through Machine-Learning-Directed Inorganic Synthesis. Matter, (2), 1–12. <a href="https://doi.org/10.1016/j.matt.2020.05.002"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
