--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">19</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">20</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -288,6 +288,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Lotfi, S., Zhang, Z., Viswanathan, G., Fortenberry, K., Mansouri Tehrani, A., & Brgoch, J. (2020). Targeting Productive Composition Space through Machine-Learning-Directed Inorganic Synthesis. Matter, (2), 1–12. <a href="https://doi.org/10.1016/j.matt.2020.05.002"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Slade, T. J., Pal, K., Grovogui, J. A., Bailey, T. P., Male, J., Khoury, J. F., … Kanatzidis, M. G. (2020). Contrasting SnTe–NaSbTe<sub>2</sub> and SnTe–NaBiTe<sub>2</sub> Thermoelectric Alloys: High Performance Facilitated by Increased Cation Vacancies and Lattice Softening. Journal of the American Chemical Society, jacs.0c05650. <a href="https://doi.org/10.1021/jacs.0c05650"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Hamaguchi, M., Momida, H., Kitajou, A., Okada, S., & Oguchi, T. (2020). Suppression of O-redox reactions by multivalent Cr in Li-excess Li<sub>2.4</sub>M<sub>0.8</sub>M'<sub>0.8</sub>O<sub>4</sub> (M, Mʹ = Cr, Mn, and Ti) cathodes with layered and cation-disordered rock-salt structures. Electrochimica Acta, 4, 136630. <a href="https://doi.org/10.1016/j.electacta.2020.136630"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Kuo, L.-Y., Guillon, O., & Kaghazchi, P. (2020). On the origin of non-monotonic variation of the lattice parameters of LiNi<sub>1/3</sub>Co<sub>1/3</sub>Mn<sub>1/3</sub>O<sub>2</sub> with lithiation/delithiation: a first-principles study. Journal of Materials Chemistry A, 8(27), 13832–13841. <a href="https://doi.org/10.1039/D0TA02319A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
