--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">21</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">22</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -290,6 +290,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Hamaguchi, M., Momida, H., Kitajou, A., Okada, S., & Oguchi, T. (2020). Suppression of O-redox reactions by multivalent Cr in Li-excess Li<sub>2.4</sub>M<sub>0.8</sub>M'<sub>0.8</sub>O<sub>4</sub> (M, Mʹ = Cr, Mn, and Ti) cathodes with layered and cation-disordered rock-salt structures. Electrochimica Acta, 4, 136630. <a href="https://doi.org/10.1016/j.electacta.2020.136630"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Kuo, L.-Y., Guillon, O., & Kaghazchi, P. (2020). On the origin of non-monotonic variation of the lattice parameters of LiNi<sub>1/3</sub>Co<sub>1/3</sub>Mn<sub>1/3</sub>O<sub>2</sub> with lithiation/delithiation: a first-principles study. Journal of Materials Chemistry A, 8(27), 13832–13841. <a href="https://doi.org/10.1039/D0TA02319A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Chen, K., Di Paola, C., Laricchia, S., Reece, M. J., Weber, C., McCabe, E., … Bonini, N. (2020). Structural and electronic evolution in the Cu<sub>3</sub>SbS<sub>4</sub> –Cu<sub>3</sub>SnS<sub>4</sub> solid solution. Journal of Materials Chemistry C. <a href="https://doi.org/10.1039/D0TC01804J"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Li, Y., Zhao, X., Bao, Q., Cui, M., Qiu, W., & Liu, J. (2020). How inactive d0 transition metal controls anionic redox in disordered Li-rich oxyfluoride cathodes. Energy Storage Materials. <a href="https://doi.org/10.1016/j.ensm.2020.07.013"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
