--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">25</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">26</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -290,10 +290,11 @@ ga('require', 'pageVisibilityTracker');
             <li>Hamaguchi, M., Momida, H., Kitajou, A., Okada, S., & Oguchi, T. (2020). Suppression of O-redox reactions by multivalent Cr in Li-excess Li<sub>2.4</sub>M<sub>0.8</sub>M'<sub>0.8</sub>O<sub>4</sub> (M, Mʹ = Cr, Mn, and Ti) cathodes with layered and cation-disordered rock-salt structures. Electrochimica Acta, 354, 136630. <a href="https://doi.org/10.1016/j.electacta.2020.136630"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Kuo, L.-Y., Guillon, O., & Kaghazchi, P. (2020). On the origin of non-monotonic variation of the lattice parameters of LiNi<sub>1/3</sub>Co<sub>1/3</sub>Mn<sub>1/3</sub>O<sub>2</sub> with lithiation/delithiation: a first-principles study. Journal of Materials Chemistry A, 8(27), 13832–13841. <a href="https://doi.org/10.1039/D0TA02319A"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Chen, K., Di Paola, C., Laricchia, S., Reece, M. J., Weber, C., McCabe, E., … Bonini, N. (2020). Structural and electronic evolution in the Cu<sub>3</sub>SbS<sub>4</sub> –Cu<sub>3</sub>SnS<sub>4</sub> solid solution. Journal of Materials Chemistry C. <a href="https://doi.org/10.1039/D0TC01804J"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Li, Y., Zhao, X., Bao, Q., Cui, M., Qiu, W., & Liu, J. (2020). How inactive <i>d</i><sup> 0</sup> transition metal controls anionic redox in disordered Li-rich oxyfluoride cathodes. Energy Storage Materials. <a href="https://doi.org/10.1016/j.ensm.2020.07.013"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Li, Y., Zhao, X., Bao, Q., Cui, M., Qiu, W., & Liu, J. (2020). How inactive <i>d</i><sup> 0</sup> transition metal controls anionic redox in disordered Li-rich oxyfluoride cathodes. Energy Storage Materials, 32, 253–260. <a href="https://doi.org/10.1016/j.ensm.2020.07.013"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Semykina, D. O., Yakovlev, I. V., Lapina, O. B., Kabanov, A. A., & Kosova, N. V. (2020). Crystal structure and migration paths of alkaline ions in NaVPO<sub>4</sub>F. Physical Chemistry Chemical Physics, 22(28), 15876–15884. <a href="https://doi.org/10.1039/D0CP02204G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article (SI)</a></li>
-            <li>Hariyani, S., & Brgoch, J. (2020). Local Structure Distortion Induced Broad Band Emission in the All-Inorganic BaScO<sub>2</sub>F:Eu<sup>2+</sup> Perovskite. Chemistry of Materials, acs.chemmater.0c02062. <a href="https://doi.org/10.1021/acs.chemmater.0c02062"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Hariyani, S., & Brgoch, J. (2020). Local Structure Distortion Induced Broad Band Emission in the All-Inorganic BaScO<sub>2</sub>F:Eu<sup>2+</sup> Perovskite. Chemistry of Materials, 32(15), 6640–6649. <a href="https://doi.org/10.1021/acs.chemmater.0c02062"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>ISHADO, Y., INOISHI, A., & OKADA, S. (2020). Exploring Factors Limiting Three-Na+ Extraction from Na<sub>3</sub>V<sub>2</sub>(PO<sub>4</sub>)<sub>3</sub>. Electrochemistry, 2–7. <a href="https://doi.org/10.5796/electrochemistry.20-00080"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Wang, Y., Csanádi, T., Zhang, H., Dusza, J., Reece, M. J., & Zhang, R. (2020). Enhanced Hardness in High‐Entropy Carbides through Atomic Randomness. Advanced Theory and Simulations, 2000111, 2000111. <a href="https://doi.org/10.1002/adts.202000111"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
