--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">29</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">30</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -298,6 +298,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Jiang, M., Mukherjee, S., Chen, Z. W., Chen, L., Li, M., Xiao, H., … Singh, C. V. (2020). Materials perspective on new lithium chlorides and bromides: insights from thermo-physical properties. Physical Chemistry Chemical Physics, 19. <a href="https://doi.org/10.1039/D0CP02946G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Gierlotka, W., Dębski, A., Terlicka, S., Gąsior, W., Pęska, M., & Polański, M. (2020). Insight into Phase Stability in the Mg-Pd System: The Ab Initio Calculations. Journal of Phase Equilibria and Diffusion. <a href="https://doi.org/10.1007/s11669-020-00836-y"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Smith, D. A., Rai, A., Lim, Y., Hartnett, T. Q., Sapkota, A., Srivastava, A., … Emori, S. (2020). Magnetic Damping in Epitaxial Iron Alloyed with Vanadium and Aluminum. Physical Review Applied, 14(3), 034042. <a href="https://doi.org/10.1103/PhysRevApplied.14.034042"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Son, S., Li, W., Lee, J.-Y., & Kwon, K. D. (2020). On the coordination of Mg2+ in aragonite: Ab-initio absorption spectroscopy and isotope fractionation study. Geochimica et Cosmochimica Acta, 286, 324–335. <a href="https://doi.org/10.1016/j.gca.2020.07.023"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
