--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">30</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">31</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -299,6 +299,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Gierlotka, W., Dębski, A., Terlicka, S., Gąsior, W., Pęska, M., & Polański, M. (2020). Insight into Phase Stability in the Mg-Pd System: The Ab Initio Calculations. Journal of Phase Equilibria and Diffusion. <a href="https://doi.org/10.1007/s11669-020-00836-y"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Smith, D. A., Rai, A., Lim, Y., Hartnett, T. Q., Sapkota, A., Srivastava, A., … Emori, S. (2020). Magnetic Damping in Epitaxial Iron Alloyed with Vanadium and Aluminum. Physical Review Applied, 14(3), 034042. <a href="https://doi.org/10.1103/PhysRevApplied.14.034042"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Son, S., Li, W., Lee, J.-Y., & Kwon, K. D. (2020). On the coordination of Mg2+ in aragonite: Ab-initio absorption spectroscopy and isotope fractionation study. Geochimica et Cosmochimica Acta, 286, 324–335. <a href="https://doi.org/10.1016/j.gca.2020.07.023"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Romaka, V. V., Romaka, L., Horyn, A., & Stadnyk, Y. (2020). Experimental and theoretical investigation of the Y–Ni–Sb and Tm–Ni–Sb systems. Journal of Alloys and Compounds, 155, 157334. <a href="https://doi.org/10.1016/j.jallcom.2020.157334"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
