--- a/index.html
+++ b/index.html
@@ -300,12 +300,26 @@ ga('require', 'pageVisibilityTracker');
             <li>Smith, D. A., Rai, A., Lim, Y., Hartnett, T. Q., Sapkota, A., Srivastava, A., … Emori, S. (2020). Magnetic Damping in Epitaxial Iron Alloyed with Vanadium and Aluminum. Physical Review Applied, 14(3), 034042. <a href="https://doi.org/10.1103/PhysRevApplied.14.034042"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Son, S., Li, W., Lee, J.-Y., & Kwon, K. D. (2020). On the coordination of Mg2+ in aragonite: Ab-initio absorption spectroscopy and isotope fractionation study. Geochimica et Cosmochimica Acta, 286, 324–335. <a href="https://doi.org/10.1016/j.gca.2020.07.023"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Romaka, V. V., Romaka, L., Horyn, A., & Stadnyk, Y. (2020). Experimental and theoretical investigation of the Y–Ni–Sb and Tm–Ni–Sb systems. Journal of Alloys and Compounds, 155, 157334. <a href="https://doi.org/10.1016/j.jallcom.2020.157334"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Li, H., Li, Y., Zhao, X., Wang, Y., Huang, K., Qiu, W., … Liu, J. (2020). Vacancy-induced anion and cation redox chemistry in cation-deficient F-doped anatase TiO<sub>2</sub>. Journal of Materials Chemistry A. <a href="https://doi.org/10.1039/D0TA07578G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
-            <li>Wang, T., Mei, J., Liu, J., & Liao, T. (2020). FMaximizing ionic transport of Li<sub>1+x</sub>Al<sub>x</sub>Ti<sub>2-x</sub>P<sub>3</sub>O<sub>12</sub> electrolytes for all-solid-state lithium-ion storage: a theoretical study. Journal of Materials Science & Technology, 127065. <a href="https://doi.org/10.1016/j.jmst.2020.09.027"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Li, H., Li, Y., Zhao, X., Wang, Y., Huang, K., Qiu, W., … Liu, J. (2020). Vacancy-induced anion and cation redox chemistry in cation-deficient F-doped anatase TiO<sub>2</sub>. Journal of Materials Chemistry A, 8(39), 20393–20401. <a href="https://doi.org/10.1039/D0TA07578G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Sadowski, M., & Albe, K. (2020). Computational study of crystalline and glassy lithium thiophosphates: Structure, thermodynamic stability and transport properties. Journal of Power Sources, 478(October), 229041. <a href="https://doi.org/10.1016/j.jpowsour.2020.229041"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
     </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <a data-toggle="collapse" href="#collapse2021">
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2021<span class="badge badge-success pull-right">1</span></h4>
+        </a>
+      </div>
+      <div id="collapse2021" class="panel-collapse collapse">
+        <div class="panel-body">
+          <ul class="list-papers">
+            <li>Wang, T., Mei, J., Liu, J., & Liao, T. (2021). Maximizing ionic transport of Li<sub>1+x</sub>Al<sub>x</sub>Ti<sub>2-x</sub>P<sub>3</sub>O<sub>12</sub> electrolytes for all-solid-state lithium-ion storage: A theoretical study. Journal of Materials Science & Technology, 73, 45–51. <a href="https://doi.org/10.1016/j.jmst.2020.09.027"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>    
   </div>
 </div>
 <br>
