--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ ga('require', 'pageVisibilityTracker');
     <div class="panel panel-default">
       <div class="panel-heading">
         <a data-toggle="collapse" href="#collapse2020">
-          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">33</span></h4>
+          <h4><i class="fa fa-plus-square-o fa-fw"></i>2020<span class="badge badge-success pull-right">34</span></h4>
         </a>
       </div>
       <div id="collapse2020" class="panel-collapse collapse">
@@ -302,6 +302,7 @@ ga('require', 'pageVisibilityTracker');
             <li>Romaka, V. V., Romaka, L., Horyn, A., & Stadnyk, Y. (2020). Experimental and theoretical investigation of the Y–Ni–Sb and Tm–Ni–Sb systems. Journal of Alloys and Compounds, 155, 157334. <a href="https://doi.org/10.1016/j.jallcom.2020.157334"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Li, H., Li, Y., Zhao, X., Wang, Y., Huang, K., Qiu, W., … Liu, J. (2020). Vacancy-induced anion and cation redox chemistry in cation-deficient F-doped anatase TiO<sub>2</sub>. Journal of Materials Chemistry A, 8(39), 20393–20401. <a href="https://doi.org/10.1039/D0TA07578G"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
             <li>Sadowski, M., & Albe, K. (2020). Computational study of crystalline and glassy lithium thiophosphates: Structure, thermodynamic stability and transport properties. Journal of Power Sources, 478(October), 229041. <a href="https://doi.org/10.1016/j.jpowsour.2020.229041"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
+            <li>Bianchini, M., Schiele, A., Schweidler, S., Sicolo, S., Fauth, F., Suard, E., … Janek, J. (2020). From LiNiO<sub>2</sub> to Li<sub>2</sub>NiO<sub>3</sub> : Synthesis, Structures and Electrochemical Mechanisms in Li-Rich Nickel Oxides. Chemistry of Materials, 3, acs.chemmater.0c02880. <a href="https://doi.org/10.1021/acs.chemmater.0c02880"><i class="fa fa-file-text-o" aria-hidden="true"></i> View Article</a></li>
           </ul>
         </div>
       </div>
